--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@
 }
 
 
-/* navigation bar links */
  nav a {
   color: black;
   display: inline-block;
@@ -42,7 +41,7 @@
   margin: 5px 0px 5px 50px;
 }
 
-/* Change color on hover */
+
 nav a:hover {
   background-color: white;
   color: black;
@@ -58,6 +57,12 @@ nav a:hover {
    padding: 10px;
    text-align: center;
  }
+
+.hero .fas {
+  margin-top: 40px;
+}
+
+
 
 /* buttons */
 
@@ -150,6 +155,7 @@ nav a:hover {
 /* connect */
 .connect {
   text-align: center;
+  margin-top: 40px;
 }
 
 /* footer */
@@ -212,9 +218,10 @@ h3 {
 /* structure */
 .capstone_project {
   width: 50%;
-  background-color: red;
   display: inline-block;
   text-align: right;
+  vertical-align: top;
+  margin-top: 40px;
 }
 
 .cap {
@@ -227,9 +234,9 @@ h3 {
 .trove_project {
   width: 50%;
   display: inline-block;
-  background-color: white;
   margin-left: 200px;
-
+  vertical-align: top;
+  margin-top: 40px;
 }
 
 .trove {
@@ -240,9 +247,10 @@ h3 {
 
 .blocjams_project {
   width: 50%;
-  background-color: white;
   display: inline-block;
   text-align: right;
+  vertical-align: top;
+  margin-top: 40px;
 
 }
 
@@ -255,9 +263,10 @@ h3 {
 
 .busybus_project {
   width: 50%;
-  background-color: white;
   display: inline-block;
   margin-left: 150px;
+  vertical-align: top;
+  margin-top: 40px;
 }
 
 .busy {
@@ -268,11 +277,137 @@ h3 {
 
 .design_process {
     width: 1000px;
-    background-color: white;
     padding: 50px;
-    margin-left: 200px;
     margin-top: 40px;
 }
 
+.slider {
+  margin: 50px;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row nowrap;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.slider__nav {
+  width: 12px;
+  height: 12px;
+  margin: 2rem 12px;
+  border-radius: 50%;
+  z-index: 10;
+  outline: 6px solid #ccc;
+  outline-offset: -6px;
+  box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
+  cursor: pointer;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+.slider__nav:checked {
+  -webkit-animation: check 0.4s linear forwards;
+          animation: check 0.4s linear forwards;
+}
+.slider__nav:checked:nth-of-type(1) ~ .slider__inner {
+  left: 0%;
+}
+.slider__nav:checked:nth-of-type(2) ~ .slider__inner {
+  left: -100%;
+}
+.slider__nav:checked:nth-of-type(3) ~ .slider__inner {
+  left: -200%;
+}
+.slider__nav:checked:nth-of-type(4) ~ .slider__inner {
+  left: -300%;
+}
+.slider__inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 400%;
+  height: 100%;
+  -webkit-transition: left 0.4s;
+  transition: left 0.4s;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row nowrap;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+}
+.slider__contents {
+  height: 100%;
+  padding: 2rem;
+  text-align: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  -webkit-flex-flow: column nowrap;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.slider__image {
+  font-size: 2.7rem;
+      color: #2196F3;
+}
+.slider__caption {
+  font-weight: 500;
+  margin: 2rem 0 1rem;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+}
+.slider__txt {
+  color: #999;
+  margin-bottom: 3rem;
+  max-width: 300px;
+}
 
-/* responsiveness */
+@-webkit-keyframes check {
+  50% {
+    outline-color: #333;
+    box-shadow: 0 0 0 12px #333, 0 0 0 36px rgba(51, 51, 51, 0.2);
+  }
+  100% {
+    outline-color: #333;
+    box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
+  }
+}
+
+@keyframes check {
+  50% {
+    outline-color: #333;
+    box-shadow: 0 0 0 12px #333, 0 0 0 36px rgba(51, 51, 51, 0.2);
+  }
+  100% {
+    outline-color: #333;
+    box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
+  }
+}
