--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 #logo  {
   float: left;
   object-fit: contain;
-  margin: 5px 0px 5px 50px;
+  margin: 5px 0px 5px 150px;
 }
 
 
@@ -52,9 +52,7 @@ nav a:hover {
 
 .hero {
    background-color: #FFFAF6;
-   height: 600px;
-   margin: auto;
-   padding: 10px;
+   height: 500px;
    text-align: center;
  }
 
@@ -145,7 +143,7 @@ nav a:hover {
   padding: 14px 25px;
   text-align: center;
   text-decoration: none;
-  margin: 20px 60px;
+  margin: 50px 60px;
 }
 
  .hero a:hover,  a:active {
@@ -191,12 +189,14 @@ h3 {
 }
 
 .hero p {
+  margin-top: 50px;
   font-size: 30px;
 }
 
 .main p {
   font-family: montserrat;
   font-size: 24px;
+  margin: 50px 5px;
 }
 
 .connect p {
@@ -208,6 +208,11 @@ h3 {
 
 .design_process {
   text-align: center;
+  margin-top: 40px;
+}
+
+.design_process h3 {
+  margin-bottom: 40px;
 }
 
 .testimonials {
@@ -216,6 +221,15 @@ h3 {
 
 
 /* structure */
+
+
+
+img.design {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .capstone_project {
   width: 50%;
   display: inline-block;
@@ -264,7 +278,7 @@ h3 {
 .busybus_project {
   width: 50%;
   display: inline-block;
-  margin-left: 150px;
+  margin-left: 200px;
   vertical-align: top;
   margin-top: 40px;
 }
@@ -275,11 +289,7 @@ h3 {
   margin-top: 40px;
 }
 
-.design_process {
-    width: 1000px;
-    padding: 50px;
-    margin-top: 40px;
-}
+
 
 .slider {
   margin: 50px;
