--- a/contact.css
+++ b/contact.css
@@ -3,6 +3,57 @@
 html{
   background: white;
 }
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: montserrat;
+}
+
+
+/* navigation bar */
+.navbar {
+  position: fixed;
+  background-color: #FFFAF6;
+  overflow: hidden;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
+
+ nav a {
+  color: black;
+  display: inline-block;
+  float: right;
+  margin: 5px 5px;
+  padding: 14px 20px;
+  text-align: center;
+  text-decoration: none;
+}
+
+#contact_nav {
+  background-color: #F3DDCC;
+  color: black;
+  padding: 14px 25px;
+  margin: 5px 5px;
+
+}
+
+#logo  {
+  float: left;
+  object-fit: contain;
+  margin: 5px 0px 5px 150px;
+}
+
+
+nav a:hover {
+  background-color: white;
+  color: black;
+}
+
 
 #feedback-page{
 	text-align:center;
@@ -32,7 +83,7 @@ html{
 	float: left;
 	left: 50%;
 	position: absolute;
-	margin-left: -260px;
+	margin-left: -200px;
 }
 
 .feedback-input {
