--- a/about-me.css
+++ b/about-me.css
@@ -4,6 +4,7 @@
 
 /* navigation bar */
 .main-navbar {
+  position: fixed;
   background-color: #FFFAF6;
   overflow: hidden;
   list-style-type: none;
@@ -47,14 +48,22 @@ nav a:hover {
 /*hero */
 
 .hero {
-   height: 500px;
+   height: 800px;
    text-align: center;
  }
 
  /* connect */
  .connect {
+   background-color: #FFFAF6;
    text-align: center;
    margin-top: 40px;
+ }
+
+ .connect p {
+   font-family: montserrat;
+   font-size: 20px;
+   line-height: 150%;
+   padding: 10px 10px;
  }
 
  .connect a:link, a:visited {
@@ -65,12 +74,12 @@ nav a:hover {
    padding: 14px 25px;
    text-align: center;
    text-decoration: none;
+   margin: 10px;
  }
 
   .connect a:hover, a:active {
    background-color: #F3DDCC;
  }
-
 /* typography */
 
  body {
@@ -80,9 +89,6 @@ nav a:hover {
  h1{
    font-family: Karla;
    font-size: 50px;
-   line-height: 167%;
-   margin-bottom: 40px;
-   margin-top: 40px;
  }
 
  h3 {
@@ -91,6 +97,13 @@ nav a:hover {
    line-height: 167%;
  }
 
+h2 {
+   font-family: Karla;
+   font-size: 24px;
+   margin-left: 20px;
+   margin-top: 10px;
+   margin-bottom: 10px;
+}
  .hero p {
    margin-top: 40px;
    font-size: 24px;
@@ -100,24 +113,28 @@ nav a:hover {
    font-family: montserrat;
    font-size: 20px;
    line-height: 167%;
+   padding: 20px;
  }
 
- .connect p {
-   font-family: montserrat;
-   font-size: 24px;
-   line-height: 167%;
-   padding: 10px 10px;
- }
 
  .main {
-  margin-top: 300px;
-  margin-left: 150px;
-  margin-right: 150px;
-
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 700px;
  }
 
  ul {
    line-height: 167%;
+   margin-left: 20px;
+ }
+
+ blockquote {
+   height: 300px;
+   margin-left: 150px;
+   margin-right: 150px;
+   line-height: 167%;
+   padding: 20px;
+   background-color: #F3DDCC;
  }
 
  /* footer */
@@ -132,16 +149,4 @@ nav a:hover {
    display: inline-block;
    padding: 15px;
    margin: 10px;
- }
-
- .connect p {
-   font-family: montserrat;
-   font-size: 24px;
-   line-height: 167%;
-   padding: 10px 10px;
- }
-
- .connect {
-   text-align: center;
-   margin-top: 40px;
  }
