--- a/project.css
+++ b/project.css
@@ -14,8 +14,13 @@
 /* main content */
 
 .main {
-  margin: 50px 150px;
-}
+   margin-top: 50px;
+   margin-bottom: 50px;
+   margin-right: auto;
+   margin-left: auto;
+   max-width: 700px;
+  }
+
 
 /* connect */
 .connect {
@@ -27,48 +32,22 @@
 /* buttons */
 
 
-.discovery a:link, a:visited {
+.main a:link, a:visited {
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+ margin-top: 30px;
+ margin-bottom: 30px;
+ width: 200px;
  background-color: #F3DDCC;
  color: black;
- display: inline-block;
  font-size: 18px;
  padding: 14px 25px;
  text-align: center;
  text-decoration: none;
- margin: 50px 60px;
 }
 
-.discovery a:hover,  a:active {
- background-color: #F3DDCC;
-}
-
-.wireframes a:link, a:visited {
- background-color: #F3DDCC;
- color: black;
- display: inline-block;
- font-size: 18px;
- padding: 14px 25px;
- text-align: center;
- text-decoration: none;
- margin: 50px 60px;
-}
-
-.wireframes a:hover,  a:active {
- background-color: #F3DDCC;
-}
-
-.mockups a:link, a:visited {
- background-color: #F3DDCC;
- color: black;
- display: inline-block;
- font-size: 18px;
- padding: 14px 25px;
- text-align: center;
- text-decoration: none;
- margin: 50px 60px;
-}
-
-.mockups a:hover,  a:active {
+.main a:hover,  a:active {
  background-color: #F3DDCC;
 }
 
@@ -94,7 +73,7 @@
  padding: 14px 25px;
  text-align: center;
  text-decoration: none;
- margin: 50px 60px;
+ margin: 10px 60px;
 }
 
 .hero a:hover,  a:active {
@@ -104,6 +83,7 @@
 
 /* navigation bar */
 .main-navbar {
+  position:fixed;
   background-color: white;
   overflow: hidden;
   list-style-type: none;
@@ -151,14 +131,14 @@ body {
 
 h1{
   font-family: Karla;
-  font-size: 50px;
+  font-size: 40px;
   line-height: 167%;
   margin: 40px;
 }
 
 h3 {
   font-family: Karla;
-  font-size: 36px;
+  font-size: 30px;
   line-height: 167%;
   margin: 40px;
 }
@@ -172,8 +152,9 @@ h2 {
 }
 
 .hero p {
-  margin-top: 40px;
+  margin-top: 30px;
   font-size: 30px;
+  line-height: 167%;
 }
 
 .main p {
@@ -193,26 +174,34 @@ h2 {
 
 /*images*/
 
-img {
+.center {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
+.side {
+  width: 30%;
+  height: 300px;
+  padding: 10px;
+}
+
+.user {
+  width: 30%;
+  height: 350px;
+  padding: 10px;
+  text-align: center;
+}
+
+.mood {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 45%;
+  height: 300px;
+  padding: 10px;
+}
 /* main */
-.summary {
-  display: inline-block;
-  width: 40%;
-  height: 300px;
-  margin: 20px 50px;
-}
-.problem {
-  display: inline-block;
-  width: 40%;
-  height: 300px;
-  margin:20px 50px;
-  vertical-align: top;
-}
 
 
 
