--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 
+
 * {
   box-sizing: border-box;
 }
 
-
-
 /* navigation bar */
-.main-navbar {
+.navbar {
+  position:fixed;
   background-color: #FFFAF6;
   overflow: hidden;
   list-style-type: none;
@@ -14,7 +14,6 @@
   padding: 0;
   width: 100%;
 }
-
 
  nav a {
   color: black;
@@ -54,33 +53,6 @@ nav a:hover {
    height: 500px;
    text-align: center;
  }
-
-.hero .fas {
-  margin-top: 40px;
-}
-
-
-
-/* connect */
-.connect {
-  text-align: center;
-  margin-top: 40px;
-}
-
-/* footer */
-footer ul{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}
-footer li{
-  list-style-type: none;
-  display: inline-block;
-  padding: 15px;
-  margin: 10px;
-}
-
 
 
 /* buttons */
@@ -142,19 +114,7 @@ footer li{
 }
 
 
-.connect a:link, a:visited {
-  background-color: #F3DDCC;
-  color: black;
-  display: inline-block;
-  font-size: 18px;
-  padding: 14px 25px;
-  text-align: center;
-  text-decoration: none;
-}
 
- .connect a:hover, a:active {
-  background-color: #F3DDCC;
-}
 
  .hero a:link, a:visited {
   background-color: #F3DDCC;
@@ -164,22 +124,109 @@ footer li{
   padding: 14px 25px;
   text-align: center;
   text-decoration: none;
-  margin: 50px 60px;
+  margin: 20px 80px;
 }
 
  .hero a:hover,  a:active {
   background-color: #F3DDCC;
 }
 
-/* structure */
+/* connect */
+.connect p {
+  font-family: montserrat;
+  font-size: 20px;
+  line-height: 150%;
+}
+
+.connect {
+  background-color: #FFFAF6;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.connect a:link, a:visited {
+  background-color: #F3DDCC;
+  color: black;
+  display: inline-block;
+  font-size: 18px;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  margin: 10px;
+}
+
+ .connect a:hover, a:active {
+  background-color: #F3DDCC;
+}
 
 
+/* footer */
+footer ul{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+footer li{
+  list-style-type: none;
+  display: inline-block;
+  padding: 15px;
+  margin: 10px;
+}
+
+
+/* typography */
+body {
+  font-family: montserrat;
+}
+
+h1{
+  font-family: Karla;
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 167%;
+}
+
+h3 {
+  font-family: Karla;
+  font-size: 30px;
+  line-height: 150%;
+}
+
+h4 {
+  margin: 40px;
+  font-size: 24px;
+  line-height: 167%;
+}
+
+.main p {
+  font-family: montserrat;
+  font-size: 20px;
+  margin: 30px 5px;
+}
+
+/* design section */
+
+.design_process {
+  height: 300px;
+  background-color: #FCFCFC;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.designpic {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
 img.design {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 40%;
 }
+
+/* projects */
 
 .capstone_project {
   width: 50%;
@@ -240,63 +287,9 @@ img.design {
   margin-top: 40px;
 }
 
-
-/* typography */
-body {
-  font-family: montserrat;
-}
-
-h1{
-  font-family: Karla;
-  font-size: 72px;
-  line-height: 167%;
-}
-
-h3 {
-  font-family: Karla;
-  font-size: 36px;
-  line-height: 167%;
-}
-
-.hero p {
-  margin-top: 50px;
-  font-size: 30px;
-}
-
-.main p {
-  font-family: montserrat;
-  font-size: 24px;
-  margin: 40px 5px;
-}
-
-.connect p {
-  font-family: montserrat;
-  font-size: 24px;
-  line-height: 167%;
-  padding: 10px 10px;
-}
-
-.design_process {
-  text-align: center;
-  margin-top: 40px;
-}
-
-.design_process h3 {
-  margin-bottom: 40px;
-}
-
-.testimonials {
-  text-align: center;
-}
-
-/*typography end*/
-
-
-
-/* slider */
+/*slider*/
 .slider {
-  margin: 50px;
-  height: 100%;
+  height: 300px;
   position: relative;
   overflow: hidden;
   display: -webkit-box;
@@ -399,6 +392,7 @@ h3 {
 }
 .slider__txt {
   color: #999;
+  line-height: 1.5;
   margin-bottom: 3rem;
   max-width: 300px;
 }
@@ -424,5 +418,3 @@ h3 {
     box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
   }
 }
-
-/* slider end */
