--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
 
 /* navigation bar */
 .navbar {
-  position:fixed;
   background-color: #FFFAF6;
-  overflow: hidden;
   list-style-type: none;
   margin: 0;
+  overflow: hidden;
+  position:fixed;
   padding: 0;
   width: 100%;
 }
@@ -35,8 +35,9 @@
 
 #logo  {
   float: left;
-  object-fit: contain;
   margin: 5px 0px 5px 150px;
+  object-fit: contain;
+
 }
 
 
@@ -113,9 +114,6 @@ nav a:hover {
   background-color: #F3DDCC;
 }
 
-
-
-
  .hero a:link, a:visited {
   background-color: #F3DDCC;
   color: black;
@@ -159,23 +157,24 @@ nav a:hover {
   background-color: #F3DDCC;
 }
 
-
 /* footer */
+
 footer ul{
-  display: flex;
   align-items: center;
+  display: flex;
   justify-content: center;
 
 }
+
 footer li{
-  list-style-type: none;
   display: inline-block;
-  padding: 15px;
+  list-style-type: none;
   margin: 10px;
+  padding: 15px;
 }
 
-
 /* typography */
+
 body {
   font-family: montserrat;
 }
@@ -194,12 +193,12 @@ h3 {
 }
 
 h4 {
-  margin: 40px;
   font-size: 24px;
   line-height: 167%;
+  margin: 40px;
 }
 
-.main p {
+ p {
   font-family: montserrat;
   font-size: 20px;
   margin: 30px 5px;
@@ -208,7 +207,6 @@ h4 {
 /* design section */
 
 .design_process {
-  height: 300px;
   background-color: #FCFCFC;
   text-align: center;
   margin-top: 30px;
@@ -219,15 +217,8 @@ h4 {
   margin-bottom: 10px;
 }
 
-img.design {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
-}
 
 /* projects */
-
 .capstone_project {
   width: 50%;
   display: inline-block;
