--- a/style.css
+++ b/style.css
@@ -409,3 +409,148 @@ h4 {
     box-shadow: 0 0 0 0 #333, 0 0 0 0 rgba(51, 51, 51, 0);
   }
 }
+
+@media only screen and (max-width: 580px) {
+
+  .navbar {
+    position: fixed;
+    background-color: #FFFAF6;
+    overflow: hidden;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    z-index: 1;
+  }
+  #contact_nav {
+    background-color: #F3DDCC;
+    color: black;
+    padding: 14px 25px;
+    margin: 5px 5px;
+
+  }
+
+  #logo  {
+    float: left;
+    object-fit: contain;
+    margin: 5px 0px 5px 10px;
+  }
+
+
+  nav a:hover {
+    background-color: white;
+    color: black;
+  }
+  /* typography */
+
+  body {
+    font-family: montserrat;
+  }
+
+  h1{
+    font-family: Karla;
+    font-weight: bold;
+    font-size: 50px;
+    line-height: 167%;
+  }
+
+  h3 {
+    font-family: Karla;
+    font-size: 30px;
+    line-height: 150%;
+  }
+
+  h4 {
+    font-size: 24px;
+    line-height: 167%;
+    margin: 4px;
+  }
+
+   p {
+    font-family: montserrat;
+    font-size: 20px;
+    margin: 3px 5px;
+  }
+
+  .fas {
+    height: 50%;
+    width: 50%;
+  }
+  /* buttons */
+
+  .capstone_project a:link, a:visited {
+    background-color: #F3DDCC;
+    color: black;
+    display: inline-block;
+    font-size: 18px;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+  }
+
+   .capstone_project a:hover, a:active {
+    background-color: #F3DDCC;
+  }
+
+  .trove_project a:link, a:visited {
+    background-color: #F3DDCC;
+    color: black;
+    display: inline-block;
+    font-size: 18px;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+  }
+
+  .trove_project a:hover, a:active {
+    background-color: #F3DDCC;
+  }
+
+  .blocjams_project a:link, a:visited {
+    background-color: #F3DDCC;
+    color: black;
+    display: inline-block;
+    font-size: 18px;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+  }
+
+   .blocjams_project a:hover, a:active {
+    background-color: #F3DDCC;
+  }
+
+  .busybus_project a:link, a:visited {
+    background-color: #F3DDCC;
+    color: black;
+    display: inline-block;
+    font-size: 18px;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+  }
+
+  .busybus_project a:hover, a:active {
+    background-color: #F3DDCC;
+  }
+
+   .hero a:link, a:visited {
+    background-color: #F3DDCC;
+    color: black;
+    display: inline-block;
+    font-size: 18px;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+    margin: 10px 5px;
+  }
+
+   .hero a:hover,  a:active {
+    background-color: #F3DDCC;
+  }
+
+
+
+
+
+}
