--- a/about-me.css
+++ b/about-me.css
@@ -35,7 +35,7 @@
 #logo  {
   float: left;
   object-fit: contain;
-  margin: 5px 0px 5px 150px;
+  margin: 5px 0px 5px 100px;
 }
 
 
@@ -104,10 +104,6 @@ h2 {
    margin-top: 10px;
    margin-bottom: 10px;
 }
- .hero p {
-   margin-top: 40px;
-   font-size: 24px;
- }
 
  .main p {
    font-family: montserrat;
@@ -150,3 +146,79 @@ h2 {
    padding: 15px;
    margin: 10px;
  }
+
+
+
+
+
+ @media only screen and (max-width: 580px) {
+
+   .navbar {
+     position: fixed;
+     background-color: #FFFAF6;
+     overflow: hidden;
+     list-style-type: none;
+     margin: 0;
+     padding: 0;
+     width: 100%;
+     z-index: 1;
+   }
+   #contact_nav {
+     background-color: #F3DDCC;
+     color: black;
+     padding: 14px 25px;
+     margin: 5px 5px;
+
+   }
+
+   #logo  {
+     float: left;
+     object-fit: contain;
+     margin: 5px 0px 5px 30px;
+   }
+
+
+   nav a:hover {
+     background-color: white;
+     color: black;
+   }
+
+   .me {
+     width: 80%;
+     height: 70%;
+   }
+
+   .main {
+     width: 80%;
+   }
+
+   blockquote {
+     font-size: 14px;
+     height: auto;
+     width: 80%;
+     margin-left: auto;
+     margin-right: auto;
+   }
+
+   .main {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 700px;
+   }
+
+   .main p {
+     font-size: 16px;
+   }
+   .hero {
+      height: 500px;
+      text-align: center;
+    }
+
+    h1 {
+      font-family: Karla;
+      font-size: 30px;
+    }
+
+
+
+}
