--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@
 
 #logo  {
   float: left;
-  margin: 5px 0px 5px 150px;
+  margin: 5px 0px 5px 100px;
   object-fit: contain;
 
 }
@@ -134,6 +134,7 @@ nav a:hover {
   font-family: montserrat;
   font-size: 20px;
   line-height: 150%;
+  padding: 10px 10px;
 }
 
 .connect {
@@ -198,7 +199,7 @@ h4 {
   margin: 40px;
 }
 
- p {
+ .main p {
   font-family: montserrat;
   font-size: 20px;
   margin: 30px 5px;
@@ -411,6 +412,11 @@ h4 {
 }
 
 @media only screen and (max-width: 580px) {
+  .hero {
+     background-color: #FFFAF6;
+     height: 400px;
+     text-align: center;
+   }
 
   .navbar {
     position: fixed;
@@ -433,7 +439,7 @@ h4 {
   #logo  {
     float: left;
     object-fit: contain;
-    margin: 5px 0px 5px 10px;
+    margin: 5px 0px 5px 30px;
   }
 
 
@@ -461,8 +467,8 @@ h4 {
   }
 
   h4 {
-    font-size: 24px;
-    line-height: 167%;
+    font-size: 20px;
+    line-height: 150%;
     margin: 4px;
   }
 
@@ -548,9 +554,94 @@ h4 {
    .hero a:hover,  a:active {
     background-color: #F3DDCC;
   }
+/*design pic*/
 
+.design {
+  width: 80%;
+}
 
+/*projects*/
 
+.capstone_project {
+  display: block;
+  text-align: center;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.cappic {
+  height: 90%;
+  width: 90%;
+  display: block;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.trove_project {
+  display: block;
+  text-align: center;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.trovepic {
+  height: 90%;
+  width: 90%;
+  display: block;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.blocjams_project {
+  display: block;
+  text-align: center;
+  vertical-align: top;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.blocpic {
+  height: 90%;
+  width: 90%;
+  display: block;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.busybus_project {
+  text-align: center;
+  display: block;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.busypic {
+  height: 90%;
+  width: 90%;
+  margin-left: 170px;
+  display: block;
+  margin-top: 10px;
+  margin-right: auto;
+}
+
+.trove {
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.bloc {
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 
 }
