--- a/about-me.css
+++ b/about-me.css
@@ -1,18 +1,18 @@
+
 * {
   box-sizing: border-box;
 }
 
 /* navigation bar */
-.main-navbar {
-  position: fixed;
+.navbar {
   background-color: #FFFAF6;
-  overflow: hidden;
   list-style-type: none;
   margin: 0;
+  overflow: hidden;
+  position:fixed;
   padding: 0;
   width: 100%;
 }
-
 
  nav a {
   color: black;
@@ -32,15 +32,20 @@
 
 }
 
+#contact_nav:hover {
+  background-color: #FFDFE3
+}
+
 #logo  {
   float: left;
-  object-fit: contain;
   margin: 5px 0px 5px 100px;
+  object-fit: contain;
+
 }
 
 
 nav a:hover {
-  background-color: white;
+  background-color: #FFDFE3;
   color: black;
 }
 
@@ -78,7 +83,7 @@ nav a:hover {
  }
 
   .connect a:hover, a:active {
-   background-color: #F3DDCC;
+   background-color: #FFDFE3;
  }
 /* typography */
 
@@ -112,16 +117,16 @@ h2 {
    padding: 20px;
  }
 
+ footer p {
+   text-align: center;
+   font-size: 12px;
+ }
 
+/* main text */
  .main {
   margin-right: auto;
   margin-left: auto;
   max-width: 700px;
- }
-
- ul {
-   line-height: 167%;
-   margin-left: 20px;
  }
 
  blockquote {
@@ -132,6 +137,7 @@ h2 {
    padding: 20px;
    background-color: #fff1f1;
  }
+
 
  /* footer */
  footer ul{
@@ -147,7 +153,27 @@ h2 {
    margin: 10px;
  }
 
+ .fa-envelope:hover {
+  color: #ffb1c3;
+ }
 
+ .fa-envelope {
+   color: black;
+ }
+
+ .fa-github-square:hover{
+    color: #ffb1c3;
+ }
+
+ .fa-linkedin:hover{
+    color: #ffb1c3;
+ }
+
+ .fa-dribbble-square:hover{
+    color: #ffb1c3;
+ }
+
+ /* responsiveness */
 
 
 
