--- a/contact.css
+++ b/contact.css
@@ -3,26 +3,21 @@
 html{
   background: white;
 }
+
 * {
   box-sizing: border-box;
 }
 
-body {
-  font-family: montserrat;
-}
-
-
 /* navigation bar */
 .navbar {
-  position: fixed;
   background-color: #FFFAF6;
-  overflow: hidden;
   list-style-type: none;
   margin: 0;
+  overflow: hidden;
+  position:fixed;
   padding: 0;
   width: 100%;
 }
-
 
  nav a {
   color: black;
@@ -42,17 +37,27 @@ body {
 
 }
 
+#contact_nav:hover {
+  background-color: #FFDFE3
+}
+
 #logo  {
   float: left;
+  margin: 5px 0px 5px 100px;
   object-fit: contain;
-  margin: 5px 0px 5px 150px;
+
 }
 
 
 nav a:hover {
-  background-color: white;
+  background-color: #FFDFE3;
   color: black;
 }
+
+body {
+  font-family: montserrat;
+}
+
 
 /* input box */
 
