--- a/contact.css
+++ b/contact.css
@@ -19,7 +19,18 @@ html{
   width: 100%;
 }
 
- nav a {
+
+#work {
+  color: black;
+  display: inline-block;
+  float: right;
+  margin: 5px 5px;
+  padding: 14px 20px;
+  text-align: center;
+  text-decoration: none;
+}
+
+ #about_me {
   color: black;
   display: inline-block;
   float: right;
@@ -31,9 +42,13 @@ html{
 
 #contact_nav {
   background-color: #F3DDCC;
+  display: inline-block;
+  float: right;
   color: black;
   padding: 14px 25px;
   margin: 5px 5px;
+  text-align: center;
+  text-decoration: none;
 
 }
 
