--- a/project.css
+++ b/project.css
@@ -39,7 +39,18 @@ h2 {
   width: 100%;
 }
 
- nav a {
+
+#work {
+  color: black;
+  display: inline-block;
+  float: right;
+  margin: 5px 5px;
+  padding: 14px 20px;
+  text-align: center;
+  text-decoration: none;
+}
+
+ #about_me {
   color: black;
   display: inline-block;
   float: right;
@@ -51,9 +62,13 @@ h2 {
 
 #contact_nav {
   background-color: #F3DDCC;
+  display: inline-block;
+  float: right;
   color: black;
   padding: 14px 25px;
   margin: 5px 5px;
+  text-align: center;
+  text-decoration: none;
 
 }
 
